--- a/demo.htm
+++ b/demo.htm
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport"  content="width=device-width,user-scalable=no">
-<title>无标题文档</title>
+<title>html5图片上传预览插件</title>
 <script type="text/javascript" src="PreviewPicture.js"></script>
 <style type="text/css">
 html,body,ul,li{ padding:0; margin:0; list-style:none;}
