--- a/demo.htm
+++ b/demo.htm
@@ -36,7 +36,7 @@ html,body,ul,li{ padding:0; margin:0; list-style:none;}
 <script>
 
 
-	var a = PreviewPicture('#previewpicture-add', {
+	PreviewPicture('#previewpicture-add', {
 		addTrue: function (oInput, oFiles, oImage) { //添加成功执行函数，传入参数：1.被选择的input标签，2.图片信息，3.生成的图片
 			
 			var oBox = document.getElementById('previewpicture');
